# assumption

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assumption.h  assumption.hpp  example.cpp  tests.cpp
.github/workflows/: validate.yml
